--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <h3
                   class="text-4xl font-semibold leading-normal mb-2 text-gray-800 mb-2"
                 >
-                  Milagros
+                  Milagros Garcia
                 </h3>
                 <div
                   class="text-sm leading-normal mt-0 mb-2 text-gray-500 font-bold uppercase"
@@ -152,15 +152,15 @@
                   <i
                     class="fas fa-map-marker-alt mr-2 text-lg text-gray-500"
                   ></i>
-                  Uruguay
+                  Uruguay, Montevideo
                 </div>
                 <div class="mb-2 text-gray-700 mt-10">
                   <i class="fas fa-briefcase mr-2 text-lg text-gray-500"></i
                   >Front End developer
                 </div>
                 <div class="mb-2 text-gray-700">
-                  <i class="fas fa-university mr-2 text-lg text-gray-500"></i
-                  >Universidad ORT
+                  <i class="fas fa-university mr-2 text-lg text-gray-500"></i>
+                  ORT
                 </div>
               </div>
               <div class="mt-10 py-10 border-t border-gray-300 text-center">
